fix: fix menu
